Few lines edited

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <h2>Skills</h2>
     <hr>
-    <p>Competitive teams master six basic skills: serve, pass, set, attack, block and dig.[3] Each of these skills
+    <p>Competitive teams master six basic skills: serve, pass, set, attack, block and dig. Each of these skills
         comprises a number of specific techniques that have been introduced over the years and are now considered
         standard practice in high-level volleyball.</p>
 
@@ -120,7 +120,7 @@
     <figcaption>A player making a jump serve</figcaption>
     <p>A player stands behind the inline and serves the ball, in an attempt to drive it into the opponent's court. The
         main objective is to make it land inside the court; it is also desirable to set the ball's direction, speed and
-        acceleration so that it becomes difficult for the receiver to handle it properly.[3] A serve is called an "ace"
+        acceleration so that it becomes difficult for the receiver to handle it properly. A serve is called an "ace"
         when the ball lands directly onto the court or travels outside the court after being touched by an opponent;
         when the only player on the server's team to touch the ball is the server.<br>
 
@@ -158,7 +158,7 @@
         The skill of passing involves fundamentally two specific techniques: underarm pass, or bump, where the ball
         touches the inside part of the joined forearms or platform, at waistline; and overhand pass, where it is handled
         with
-        the fingertips, like a set, above the head.[3] Either are acceptable in professional and beach volleyball;
+        the fingertips, like a set, above the haed.Either are acceptable in professional and beach volleyball;
         however,
         there are much tighter regulations on the overhand pass in beach volleyball. When a player passes a ball to
         their setter, it's ideal that the ball does not have a lot of spin to make it easier for the setter.</p><br>
@@ -241,7 +241,7 @@
         A block that is aimed at completely stopping an attack, thus making the ball remain in the opponent's court, is
         called offensive. A well-executed offensive block is performed by jumping and reaching to penetrate with one's
         arms and hands over the net and into the opponent's area.[3] It requires anticipating the direction the ball
-        will go once the attack takes place.[3] It may also require calculating the best footwork to executing the
+        will go once the attack takes place. It may also require calculating the best footwork to executing the
         "perfect" block.<br><br>
 
         The jump should be timed so as to intercept the ball's trajectory prior to it crossing over the plane of the
@@ -420,7 +420,7 @@
         not in the setter position. At the international level, only the Cuban National Women's Team employs this kind
         of formation. It is also used by NCAA teams in Division III men's play and women's play in all divisions,
         partially due to the variant rules used which allow more substitutions per set than the 6 allowed in the
-        standard rules—12 in matches involving two Division III men's teams[36] and 15 for all women's play.</p>
+        standard rules—12 in matches involving two Division III men's teams and 15 for all women's play.</p>
 
     <h4>5-1</h4>
     <p>The 5–1 formation has only one player who assumes setting responsibilities regardless of their position in the
