Added form and improved css

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 
 <body>
-<nav>
-    <ul>
-        <li><a class="active" href="#home">Home</a></li>
-        <li><a href="pictures.html">Pictures</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#about">About</a></li>
-    </ul>
-</nav>
+    <nav>
+        <ul>
+            <li><a class="active" href="#home">Home</a></li>
+            <li><a href="pictures.html">Pictures</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">About</a></li>
+        </ul>
+    </nav>
     <h1>My Favourite Game</h1>
     <img src="./volleyball_net.jpg" id="volley" width=800px>
     <div class="body">
@@ -68,8 +68,8 @@
         <h2 class="subhead">Origin</h2>
         <hr>
         <figure class="imgright">
-            <img src="./William_G._Morgan.jpg" width=200px>
-            <figcaption>William G.Morgan</figcaption>
+            <img src="./William_G._Morgan.jpg" class="border" width=200px>
+            <figcaption class="fix">William G.Morgan</figcaption>
         </figure>
         <p>In the winter of 1895, in Holyoke, Massachusetts (United States), William G. Morgan, a YMCA physical
             education
@@ -106,9 +106,9 @@
         <hr>
         <p>
         <figure class="imgright">
-            <img src="./VolleyballCourt.svg" width=300px height=400px>
-            <figcaption>Volleyball court</figcaption>
-        </figure> 
+            <img src="./VolleyballCourt.svg" class="border" width=200px height=300px>
+            <figcaption class="fix">Volleyball court</figcaption>
+        </figure>
         A volleyball court is 9 m × 18 m (29.5 ft × 59.1 ft), divided into equal square halves by a net with a width
         of one meter (39.4 in).[18] The top of the net is 2.43 m (7 ft 11+11⁄16 in) above the center of the court
         for men's competition, and 2.24 m (7 ft 4+3⁄16 in) for women's competition, varied for veterans and junior
@@ -120,10 +120,11 @@
         A line 3 m (9.8 ft) from and parallel to the net is considered the "attack line". This "3 meter" (or
         "10-foot") line divides the court into "back row" and "front row" areas (also back court and front
         court).These are in turn divided into 3 areas each: these are numbered as follows, starting from area
-        "1", which is the position of the serving player.<br>
-        <figure class="imgleft"><img src="./VolleyballRotation.svg" width=300px height=400px>
-            <figcaption>Rotation pattern</figcaption>
-        </figure>
+        "1", which is the position of the serving player.<br></p>
+        <p>
+        <figure class="imgleft"><img src="./VolleyballRotation.svg" class="border" width=200px height=300px>
+            <figcaption class="fix">Rotation pattern</figcaption>
+        </figure><br>
         After a team gains the serve (also known as siding out), its members must rotate in a clockwise direction, with
         the player previously in area "2" moving to area "1" and so on, with the player from area "1" moving to area
         "6".Each player rotates only one time after the team gains possession of the service; the next time each
@@ -137,6 +138,12 @@
         the court. A ball passing over the net must pass completely between the antennae (or their theoretical
         extensions to the ceiling) without contacting them.</p>
 
+        <h3>The ball</h3>
+        <p>FIVB regulations state that the ball must be spherical, made of leather or synthetic leather, have a
+            circumference of 65–67 cm (26–26 in), a weight of 260–280 g (9.2–9.9 oz) and an interior air pressure of
+            0.30–0.325 kg/cm2 0.30–0.325 kg/cm2 (4.27–4.62 psi). Other governing bodies have similar regulations.
+        </p>
+
         <h2 class="subhead">Skills</h2>
         <hr>
         <p>Competitive teams master six basic skills: serve, pass, set, attack, block and dig. Each of these skills
@@ -146,8 +153,8 @@
 
         <h3 class="skills">Serve</h3>
         <figure class="imgright">
-            <img src="./Volleyball_Sprungaufschlag.jpg" width=200px>
-            <figcaption>A player making a jump serve</figcaption>
+            <img src="./Volleyball_Sprungaufschlag.jpg" class="border" width=200px>
+            <figcaption class="fix">A player making a jump serve</figcaption>
         </figure>
         <p>A player stands behind the inline and serves the ball, in an attempt to drive it into the opponent's
             court.
@@ -212,8 +219,8 @@
 
         <p>
         <figure class="imgright">
-            <img src="./Volleyball_reception.jpg" width=200px>
-            <figcaption>A player making a forearm pass</figcaption>
+            <img src="./Volleyball_reception.jpg" class="border" width=200px>
+            <figcaption class="fix">A player making a forearm pass</figcaption>
         </figure> Also called reception, the pass is the attempt by a team to properly handle the opponent's serve
         or any form
         of
@@ -233,8 +240,8 @@
 
         <p>
         <figure class="imgright">
-            <img src="./Jump_Set.jpg" width=200px>
-            <figcaption>Jump set</figcaption>
+            <img src="./Jump_Set.jpg" class="border" width=200px>
+            <figcaption class="fix">Jump set</figcaption>
         </figure> The set is usually the second contact that a team makes with the ball.The main goal of setting is
         to put the
         ball in the air in such a way that it can be driven by an attack into the opponent's court.The setter
@@ -264,48 +271,41 @@
         As with a set or an overhand pass, the setter/passer must be careful to touch the ball with both hands at
         the
         same time.If one hand is noticeably late to touch the ball this could result in a less effective set, as
-        well as the referee calling a 'double hit' and giving the point to the opposing team.</p><br><br>
+        well as the referee calling a 'double hit' and giving the point to the opposing team.</p><br>
 
         <h3 class="skills">Attack</h3>
 
         <p>
         <figure class="imgright">
-            <img src="./Bilateral_España-Portugal_de_voleibol_-_02.jpg" width=200px>
-            <figcaption>A Spanish player, #18 in red outfit, about to spike towards the Portuguese field, whose
-                players
-                try
-                to
-                block the way</figcaption>
+            <img src="./Bilateral_España-Portugal_de_voleibol_-_02.jpg" class="border" width=200px>
+            <figcaption class="fix"> A Spanish player, #18 in red outfit, about to spike towards the Portuguese field,
+                whose
+                players try to block the way</figcaption>
         </figure> The attack, also known as the spike, is usually the third contact a team makes with the ball.The
-        object of
-        attacking is to handle the ball so that it lands on the opponent's court and cannot be defended.A player
+        object of attacking is to handle the ball so that it lands on the opponent's court and cannot be defended.A
+        player
         makes a series of steps (the "approach"), jumps, and swings at the ball.<br><br>
 
         Ideally, the contact with the ball is made at the apex of the hitter's jump. At the moment of contact, the
         hitter's arm is fully extended above their head and slightly forward, making the highest possible contact
-        while
-        maintaining the ability to deliver a powerful hit. The hitter uses arm swing, wrist snap, and a rapid
-        forward
-        contraction of the entire body to drive the ball.A 'bounce' is a slang term for a very hard/loud spike that
+        while maintaining the ability to deliver a powerful hit. The hitter uses arm swing, wrist snap, and a rapid
+        forward contraction of the entire body to drive the ball.A 'bounce' is a slang term for a very hard/loud spike
+        that
         follows an almost straight trajectory steeply downward into the opponent's court and bounces very high into
-        the
-        air. A "kill" is the slang term for an attack that is not returned by the other team thus resulting in a
+        the air. A "kill" is the slang term for an attack that is not returned by the other team thus resulting in a
         point.<br><br>
 
         Contemporary volleyball comprises a number of attacking techniques:</p>
         <ul>
             <li>Backcourt (or back row): an attack performed by a back-row player. The player must jump from behind
-                the
-                3-meter line before making contact with the ball, but may land in front of the 3-meter line. A Pipe
+                the 3-meter line before making contact with the ball, but may land in front of the 3-meter line. A Pipe
                 Attack
                 is when the center player in the back row attacks the ball.</li>
             <li>Line and Cross-court Shot: refers to whether the ball flies in a straight trajectory parallel to the
                 sidelines, or crosses through the court in an angle. A cross-court shot with a very pronounced
-                angle,
-                resulting in the ball landing near the 3-meter line, is called a cut shot.</li>
+                angle, resulting in the ball landing near the 3-meter line, is called a cut shot.</li>
             <li>Dip/Dink/Tip/Cheat/Dump: the player does not try to make a hit, but touches the ball lightly, so
-                that it
-                lands on an area of the opponent's court that is not being covered by the defence.</li>
+                that it lands on an area of the opponent's court that is not being covered by the defence.</li>
             <li>Tool/Wipe/Block-abuse: the player does not try to make a hard spike, but hits the ball so that it
                 touches
                 the opponent's block and then bounces off-court.</li>
@@ -313,32 +313,27 @@
                 opponent's
                 defence.</li>
             <li>Quick hit/"One": an attack (usually by the middle blocker) where the approach and jump begin before
-                the
-                setter contacts the ball. The set (called a "quick set") is placed only slightly above the net and
-                the
-                ball
-                is struck by the hitter almost immediately after leaving the setter's hands. Quick attacks are often
+                the setter contacts the ball. The set (called a "quick set") is placed only slightly above the net and
+                the ball is struck by the hitter almost immediately after leaving the setter's hands. Quick attacks are
+                often
                 effective because they isolate the middle blocker to be the only blocker on the hit.</li>
             <li>Slide: a variation of the quick hit that uses a low backset. The middle hitter steps around the
-                setter
-                and
-                hits from behind him or her.</li>
+                setter and hits from behind him or her.</li>
             <li>Double quick hit/"Stack"/"Tandem": a variation of quick hit where two hitters, one in front and one
-                behind
-                the setter or both in front of the setter, jump to perform a quick hit at the same time. It can be
-                used
-                to
-                deceive opposite blockers and free a fourth hitter attacking from back-court, maybe without block at
+                behind the setter or both in front of the setter, jump to perform a quick hit at the same time. It can
+                be
+                used to deceive opposite blockers and free a fourth hitter attacking from back-court, maybe without
+                block at
                 all.
-            </li>
+            </li><br>
         </ul>
 
         <h3 class="skills">Block</h3>
 
         <p>
         <figure class="imgright">
-            <img src="./Triple_block_.jpg" width=200px>
-            <figcaption>Three players performing a block (a.k.a. triple block)</figcaption>
+            <img src="./Triple_block_.jpg" class="border" width=200px>
+            <figcaption class="fix"> Three players performing a block (a.k.a. triple block)</figcaption>
         </figure>Blocking refers to the actions taken by players standing at the net to stop or alter an opponent's
         attack.<br><br>
 
@@ -377,11 +372,11 @@
         At the same time, the block position influences the positions where other defenders place themselves while
         opponent hitters are spiking.</p><br>
 
-        <h3 class="subhead">Dig</h3>
+        <h3 class="skills">Dig</h3>
         <p>
         <figure class="imgright">
-            <img src="./Volleyball_dig.jpg" width=200px>
-            <figcaption>Player going for a dig</figcaption>
+            <img src="./Volleyball_dig.jpg" class="border" width=200px>
+            <figcaption class="fix">Player going for a dig</figcaption>
         </figure>>Digging is the ability to prevent the ball from touching one's court after a spike or attack,
         particularly a
         ball
@@ -408,9 +403,9 @@
 
         <h2 class="subhead">Team Play</h2>
         <hr>
-        <figure>
-            <img src="./U.S._Womens_Volleyball_team_CISM_2007.jpg" width=200px>
-            <figcaption>U.S. women's team doing team planning</figcaption>
+        <figure class="imgleft">
+            <img src="./U.S._Womens_Volleyball_team_CISM_2007.jpg" class="border" width=200px>
+            <figcaption class="fix">U.S. women's team doing team planning</figcaption>
         </figure>
         <p>Volleyball is essentially a game of transition from one of the above skills to the next, with
             choreographed
@@ -476,8 +471,9 @@
         <hr>
         <h3 class="skills">Player specialization</h3>
         <figure class="imgright">
-            <img src="./Europei_di_pallavolo_2005_-_Italia-Russia.jpg" width=200px>
-            <figcaption>An image from an international match between Italy and Russia in 2005. A Russian player on
+            <img src="./Europei_di_pallavolo_2005_-_Italia-Russia.jpg" class="border" width=200px>
+            <figcaption class="fix">An image from an international match between Italy and Russia in 2005. A Russian
+                player on
                 the
                 left
                 has
@@ -710,7 +706,18 @@
             The 5–1 offence is actually a mix of 6–2 and 4–2: when the setter is in the front row, the offense looks
             like a
             4–2; when the setter is in the back row, the offense looks like a 6–2.</p><br><br>
-        <img src="./volleyball_hand.jpg" width=500px>
+        <img src="./volleyball_hand.jpg" class="border" width=500px>
+    </div>
+    <div class="footer">
+        <div class="title">Subscribe to our newsletter!</div>
+        <form class="form">
+            <label>Name</label>
+            <input type="text" class="Name" placeholder="Your name"><br>
+            <label>Email</label>
+            <input type="email" placeholder="abc@gmail.com"><br>
+            <input type="submit" class="button" value="Submit"><br>
+        </form>
+        </div>
     </div>
 </body>
 
