--- a/pictures.html
+++ b/pictures.html
@@ -12,13 +12,14 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a  href="index.html">Home</a></li>
             <li><a class="active" href="pictures.html">Pictures</a></li>
             <li><a href="#news">News</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#about">About</a></li>
         </ul>
     </nav>
+</div>
     <p class="pictures">
         <div class="row">
             <div class="column">
@@ -64,6 +65,7 @@
             </div>
         </div>
     </p>
+    
 </body>
 
 </html>
